# my-OpenGL-Study

./: README.md
OpenGLNode/: OpenGL的Application类的创建.md
g-truc-glm-33b0eb9/bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  PACKAGE.vcxproj  (+11 more)
model/: head.max
openglcode/: .gitignore  CMakeLists.txt  glad.c  main.cpp
openglcode/application/: Application.cpp  Application.h  CMakeLists.txt  camera.cpp  camera.h
openglcode/application/camera/: camera.cpp  camera.h  cameracontrol.cpp  cameracontrol.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectivrCamera .cpp  perspectivrCamera.h
openglcode/assets/shaders/: 3Dvertex.glsl  lightadd.glsl  lightfragment.glsl  whiteshader.glsl
openglcode/glframework/: CMakeLists.txt  Scene.cpp  Scene.h  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h
openglcode/glframework/light/: ambientLight.cpp  ambientLight.h  directionLight.cpp  directionLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
openglcode/glframework/materials/: material.h  phongMaterial.cpp  phongMaterial.h  whiteMaterial.cpp  whiteMaterial.h
openglcode/glframework/renderer/: render.cpp  render.h
openglcode/globa/: base.h  math.h
openglcode/imgui/: CMakeLists.txt
openglcode/wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
(+415 files in other folders)
